--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,6 +17,8 @@ body {
     position: absolute;
     top: 40%;
     left: 60%;
+    border: 0px solid transparent;
+    background: #fff;
 }
 
 .landing__img {
